@@ -11,6 +11,7 @@ Version 1.0.0
 Issues fixed:
 #48: Need man pages
 #59: grossd 0.9.3 leaks memory
+#60: Grossd should do all dns queries as fully qualified
 
 - changed filter_bits default back to 24, as stated in the docs.
 
